# dEXEcute

./: CMakeLists.txt  README.md
assembler/: CMakeLists.txt  README.txt  makefile  run_debug.sh  run_debug2.sh  run_release.sh  run_test.sh
assembler/fileTests/: in0.dasm  in1.dasm  in2.dasm  in3.dasm  out0.dexe  out1.dexe  out2.dexe  out3.dexe
assembler/src/: assembler.c  assembler.cpp  assembler.h  constants.c  constants.h  dconst.cpp  dconst.h  main.c  main.cpp  main.h  makefile  run_release.sh  tests.c  tests.h  utils.c  utils.h
assembler/src/test/: assemblerTester.cpp  assemblerTester.h  main.c  main.h  main_test.cpp  main_test.h  run_debug.sh  run_debug2.sh  run_test.sh  tests.c  tests.h
docs/: Instruction Set Architecture.txt
emulator/: CMakeLists.txt  test2.pro
emulator/oldC/src/: emuUtils.c  emuUtils.h  emulator.c  global.c  global.h
emulator/oldC/src/interface/: consoleInterface.h
emulator/src/: emulator.h  main.c  main.cpp  main.h  mainwindow.cpp  mainwindow.h  makefile
emulator/src/interface/: consoleInterface.c
